--- a/index.html
+++ b/index.html
@@ -679,6 +679,9 @@
         { id: 'europe-scapa', name: 'Scapa Flow', region: 'Europe', price: 3.50, wixUrl: 'https://www.otterseas.com/product-page/scapa-flow', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Scapa', description: 'Historic WWI shipwrecks' },
       ],
       Americas: [
+         { id: 'americas-socorro', name: 'Socorro', region: 'Americas', price: 3.50, wixUrl: 'https//www.otterseas.com/product-page/socorro', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Galapagos', description: 'mantas mantas mantas' },
+         { id: 'americas-socorro', name: 'Socorro', region: 'Americas', price: 3.50, wixUrl: 'https//www.otterseas.com/product-page/socorro', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Galapagos', description: 'mantas mantas mantas' },
+         { id: 'americas-socorro', name: 'Socorro', region: 'Americas', price: 3.50, wixUrl: 'https//www.otterseas.com/product-page/socorro', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Galapagos', description: 'mantas mantas mantas' },
         { id: 'americas-galapagos', name: 'Galápagos', region: 'Americas', price: 3.50, wixUrl: 'https://www.otterseas.com/product-page/galapagos', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Galapagos', description: 'Hammerhead sharks and unique wildlife' },
         { id: 'americas-socorro', name: 'Socorro', region: 'Americas', price: 3.50, wixUrl: 'https://www.otterseas.com/product-page/socorro', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Socorro', description: 'Giant manta interactions' },
         { id: 'americas-bonaire', name: 'Bonaire', region: 'Americas', price: 3.50, wixUrl: 'https://www.otterseas.com/product-page/bonaire', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Bonaire', description: 'Shore diving paradise' },
