--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       z-index: 1;
       max-width: 1400px;
       margin: 0 auto;
-      padding: 2rem 1.5rem;
+      padding: 1.5rem 1rem;
     }
 
     .page-header {
       text-align: center;
-      margin-bottom: 3rem;
-      padding-bottom: 2rem;
+      margin-bottom: 2rem;
+      padding-bottom: 1.5rem;
       border-bottom: 2px solid var(--border-light);
     }
 
@@ -82,14 +82,14 @@
     .main-content {
       display: grid;
       grid-template-columns: 1fr 360px;
-      gap: 2rem;
+      gap: 1.5rem;
       align-items: start;
     }
 
     .left-section {
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 1.5rem;
     }
 
     /* Water Bottle Card */
@@ -97,11 +97,11 @@
       background: var(--white);
       border: 1px solid var(--border-light);
       border-radius: 12px;
-      padding: 2rem;
+      padding: 1.5rem;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
       display: flex;
       align-items: center;
-      gap: 2rem;
+      gap: 1.5rem;
       cursor: pointer;
       transition: all 0.3s ease;
     }
@@ -187,7 +187,7 @@
       background: var(--white);
       border: 1px solid var(--border-light);
       border-radius: 12px;
-      padding: 2rem;
+      padding: 1.5rem;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
       min-height: 500px;
       max-height: 650px;
@@ -196,14 +196,14 @@
     }
 
     .selector-header {
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .selector-header h3 {
       font-family: 'Playfair Display', serif;
       font-size: 1.6rem;
       color: var(--primary-navy);
-      margin-bottom: 1rem;
+      margin-bottom: 0.75rem;
     }
 
     .tabs {
@@ -275,7 +275,8 @@
       transition: all 0.3s ease;
       text-decoration: none;
       color: inherit;
-      display: block;
+      display: flex;
+      flex-direction: column;
     }
 
     .sticker-card:hover {
@@ -290,6 +291,10 @@
       object-fit: cover;
       margin-bottom: 0.75rem;
       border-radius: 6px;
+    }
+
+    .sticker-card-info {
+      flex: 1;
     }
 
     .sticker-card h4 {
@@ -309,6 +314,48 @@
       font-size: 0.95rem;
       color: var(--coral-accent);
       font-weight: 600;
+      margin-bottom: 0.75rem;
+    }
+
+    .sticker-card-actions {
+      display: flex;
+      gap: 0.5rem;
+    }
+
+    .btn-add-small {
+      flex: 1;
+      padding: 0.5rem;
+      background: var(--soft-teal);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-weight: 500;
+      font-size: 0.85rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .btn-add-small:hover {
+      background: #4a8d95;
+      transform: translateY(-1px);
+    }
+
+    .btn-view-small {
+      flex: 1;
+      padding: 0.5rem;
+      background: white;
+      color: var(--soft-teal);
+      border: 1px solid var(--soft-teal);
+      border-radius: 6px;
+      font-weight: 500;
+      font-size: 0.85rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .btn-view-small:hover {
+      background: var(--soft-teal);
+      color: white;
     }
 
     /* Bundle Section */
@@ -316,7 +363,7 @@
       background: var(--white);
       border: 1px solid var(--border-light);
       border-radius: 12px;
-      padding: 2rem;
+      padding: 1.5rem;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
     }
 
@@ -324,24 +371,25 @@
       font-family: 'Playfair Display', serif;
       font-size: 1.6rem;
       color: var(--primary-navy);
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .bundle-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
+      gap: 1rem;
     }
 
     .bundle-card {
       background: var(--light-cream);
       border: 1px solid var(--border-light);
       border-radius: 10px;
-      padding: 1.5rem;
+      padding: 1.25rem;
       transition: all 0.3s ease;
       text-decoration: none;
       color: inherit;
-      display: block;
+      display: flex;
+      flex-direction: column;
       cursor: pointer;
     }
 
@@ -349,6 +397,10 @@
       transform: translateY(-3px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
       border-color: var(--coral-accent);
+    }
+
+    .bundle-card-info {
+      flex: 1;
     }
 
     .bundle-card h4 {
@@ -367,7 +419,7 @@
     .bundle-count {
       font-size: 0.85rem;
       color: var(--soft-teal);
-      margin-bottom: 1rem;
+      margin-bottom: 0.75rem;
       font-weight: 500;
     }
 
@@ -375,6 +427,12 @@
       font-size: 1.4rem;
       color: var(--coral-accent);
       font-weight: 700;
+      margin-bottom: 0.75rem;
+    }
+
+    .bundle-card-actions {
+      display: flex;
+      gap: 0.5rem;
     }
 
     /* Cart Sidebar */
@@ -382,11 +440,11 @@
       background: var(--white);
       border: 1px solid var(--border-light);
       border-radius: 12px;
-      padding: 2rem;
+      padding: 1.5rem;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
       position: sticky;
-      top: 2rem;
-      max-height: calc(100vh - 4rem);
+      top: 1.5rem;
+      max-height: calc(100vh - 3rem);
       display: flex;
       flex-direction: column;
     }
@@ -395,15 +453,15 @@
       font-family: 'Playfair Display', serif;
       font-size: 1.8rem;
       color: var(--primary-navy);
-      margin-bottom: 1.5rem;
-      padding-bottom: 1rem;
+      margin-bottom: 1rem;
+      padding-bottom: 0.75rem;
       border-bottom: 2px solid var(--border-light);
     }
 
     .cart-items {
       flex: 1;
       overflow-y: auto;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .cart-items::-webkit-scrollbar {
@@ -473,7 +531,7 @@
 
     .cart-summary {
       border-top: 2px solid var(--border-light);
-      padding-top: 1.5rem;
+      padding-top: 1rem;
     }
 
     .pricing-tier-info {
@@ -575,7 +633,7 @@
       justify-content: center;
       z-index: 1000;
       animation: fadeIn 0.3s ease;
-      padding: 2rem;
+      padding: 1rem;
     }
 
     @keyframes fadeIn {
@@ -585,10 +643,10 @@
 
     .modal-content {
       background: var(--white);
-      border-radius: 12px;
-      max-width: 900px;
-      width: 100%;
-      max-height: 900vh;
+      border-radius: 8px;
+      max-width: 1200px;
+      width: 95%;
+      height: 85vh;
       box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
       animation: slideUp 0.3s ease;
       position: relative;
@@ -602,16 +660,17 @@
     }
 
     .modal-header {
-      padding: 1.5rem 2rem;
+      padding: 0.75rem 1rem;
       border-bottom: 1px solid var(--border-light);
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-shrink: 0;
     }
 
     .modal-header h3 {
       font-family: 'Playfair Display', serif;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       color: var(--primary-navy);
       margin: 0;
     }
@@ -621,14 +680,15 @@
       border: 1px solid var(--border-light);
       color: var(--text-light);
       border-radius: 50%;
-      width: 36px;
-      height: 36px;
+      width: 32px;
+      height: 32px;
       cursor: pointer;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       display: flex;
       align-items: center;
       justify-content: center;
       transition: all 0.3s ease;
+      flex-shrink: 0;
     }
 
     .modal-close:hover {
@@ -641,6 +701,7 @@
       flex: 1;
       overflow: hidden;
       position: relative;
+      min-height: 0;
     }
 
     .modal-body iframe {
@@ -651,15 +712,17 @@
     }
 
     .modal-footer {
-      padding: 1.5rem 2rem;
+      padding: 0.75rem 1rem;
       border-top: 1px solid var(--border-light);
       display: flex;
-      gap: 1rem;
+      gap: 0.75rem;
       justify-content: flex-end;
+      flex-shrink: 0;
     }
 
     .modal-footer .btn-primary {
-      padding: 0.75rem 1.5rem;
+      padding: 0.65rem 1.25rem;
+      font-size: 0.95rem;
     }
 
     @media (max-width: 1024px) {
@@ -693,8 +756,9 @@
       }
 
       .modal-content {
-        max-width: 95%;
-        max-height: 95vh;
+        max-width: 98%;
+        width: 98%;
+        height: 90vh;
       }
     }
 
@@ -708,7 +772,21 @@
       }
 
       .modal-overlay {
-        padding: 1rem;
+        padding: 0.5rem;
+      }
+
+      .modal-content {
+        height: 95vh;
+      }
+
+      .sticker-card-actions,
+      .bundle-card-actions {
+        flex-direction: column;
+      }
+
+      .btn-add-small,
+      .btn-view-small {
+        width: 100%;
       }
     }
   </style>
@@ -742,10 +820,6 @@
       ],
       Americas: [
         { id: 'americas-galapagos', name: 'Galápagos', region: 'Americas', basePrice: 3.50, wixUrl: 'https://www.otterseas.com/product-page/galapagos', wixProductId: 'YOUR_WIX_ID', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Galapagos', description: 'Hammerhead sharks and unique wildlife' },
-        { id: 'americas-socorro', name: 'Socorro', region: 'Americas', basePrice: 3.50, wixUrl: 'https://www.otterseas.com/product-page/socorro', wixProductId: 'YOUR_WIX_ID', image: 'https://static.wixstatic.com/media/5c0d7c_abea2be15a684e9a943b7915585da8d1~mv2.jpg/v1/fill/w_1102,h_1102,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/5c0d7c_abea2be15a684e9a943b7915585da8d1~mv2.jpg', description: 'Giant manta interactions' },
-        { id: 'americas-socorro', name: 'Socorro', region: 'Americas', basePrice: 3.50, wixUrl: 'https://www.otterseas.com/product-page/socorro', wixProductId: 'YOUR_WIX_ID', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Socorro', description: 'Giant manta interactions' },
-        { id: 'americas-socorro', name: 'Socorro', region: 'Americas', basePrice: 3.50, wixUrl: 'https://www.otterseas.com/product-page/socorro', wixProductId: 'YOUR_WIX_ID', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Socorro', description: 'Giant manta interactions' },
-        { id: 'americas-socorro', name: 'Socorro', region: 'Americas', basePrice: 3.50, wixUrl: 'https://www.otterseas.com/product-page/socorro', wixProductId: 'YOUR_WIX_ID', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Socorro', description: 'Giant manta interactions' },
         { id: 'americas-socorro', name: 'Socorro', region: 'Americas', basePrice: 3.50, wixUrl: 'https://www.otterseas.com/product-page/socorro', wixProductId: 'YOUR_WIX_ID', image: 'https://via.placeholder.com/200x200/5a9fa8/ffffff?text=Socorro', description: 'Giant manta interactions' },
       ],
       Oceania: [
@@ -919,11 +993,27 @@
                 <div className="sticker-grid-container">
                   <div className="sticker-grid">
                     {STICKERS[activeTab].map(sticker => (
-                      <div key={sticker.id} className="sticker-card" onClick={() => openProductModal(sticker)}>
-                        <img src={sticker.image} alt={sticker.name} />
-                        <h4>{sticker.name}</h4>
-                        <div className="region">{sticker.region}</div>
-                        <div className="price">£{sticker.basePrice.toFixed(2)}</div>
+                      <div key={sticker.id} className="sticker-card">
+                        <img src={sticker.image} alt={sticker.name} onClick={() => openProductModal(sticker)} />
+                        <div className="sticker-card-info" onClick={() => openProductModal(sticker)}>
+                          <h4>{sticker.name}</h4>
+                          <div className="region">{sticker.region}</div>
+                          <div className="price">£{sticker.basePrice.toFixed(2)}</div>
+                        </div>
+                        <div className="sticker-card-actions">
+                          <button 
+                            className="btn-add-small"
+                            onClick={(e) => { e.stopPropagation(); addToCart(sticker); }}
+                          >
+                            Add
+                          </button>
+                          <button 
+                            className="btn-view-small"
+                            onClick={(e) => { e.stopPropagation(); openProductModal(sticker); }}
+                          >
+                            View
+                          </button>
+                        </div>
                       </div>
                     ))}
                   </div>
@@ -935,11 +1025,27 @@
                 <h3>Pre-Selected Bundles</h3>
                 <div className="bundle-grid">
                   {BUNDLES.map(bundle => (
-                    <div key={bundle.id} className="bundle-card" onClick={() => openProductModal(bundle, true)}>
-                      <h4>{bundle.name}</h4>
-                      <div className="bundle-description">{bundle.description}</div>
-                      <div className="bundle-count">{bundle.count} stickers included</div>
-                      <div className="bundle-price">£{bundle.price.toFixed(2)}</div>
+                    <div key={bundle.id} className="bundle-card">
+                      <div className="bundle-card-info" onClick={() => openProductModal(bundle, true)}>
+                        <h4>{bundle.name}</h4>
+                        <div className="bundle-description">{bundle.description}</div>
+                        <div className="bundle-count">{bundle.count} stickers included</div>
+                        <div className="bundle-price">£{bundle.price.toFixed(2)}</div>
+                      </div>
+                      <div className="bundle-card-actions">
+                        <button 
+                          className="btn-add-small"
+                          onClick={(e) => { e.stopPropagation(); addToCart(bundle, true); }}
+                        >
+                          Add Bundle
+                        </button>
+                        <button 
+                          className="btn-view-small"
+                          onClick={(e) => { e.stopPropagation(); openProductModal(bundle, true); }}
+                        >
+                          View
+                        </button>
+                      </div>
                     </div>
                   ))}
                 </div>
